tests/negative/wrong_field_init.sans
// expect-error: undefined
struct Point { x:I y:I }
main() I {
  p = Point{x: 1 z: 2}
  0
}
